// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1ax3zce"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button renders with icons 1`] = `
<DocumentFragment>
  <div
    class="chakra-button__group css-101kej7"
    role="group"
  >
    <button
      class="chakra-button css-1gkcy1z"
      type="button"
    >
      <span
        class="chakra-button__icon css-hurga0"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-9na4ut"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <g
            fill="currentColor"
          >
            <path
              d="M11.114,14.556a1.252,1.252,0,0,0,1.768,0L22.568,4.87a.5.5,0,0,0-.281-.849A1.966,1.966,0,0,0,22,4H2a1.966,1.966,0,0,0-.289.021.5.5,0,0,0-.281.849Z"
            />
            <path
              d="M23.888,5.832a.182.182,0,0,0-.2.039l-6.2,6.2a.251.251,0,0,0,0,.354l5.043,5.043a.75.75,0,1,1-1.06,1.061l-5.043-5.043a.25.25,0,0,0-.354,0l-2.129,2.129a2.75,2.75,0,0,1-3.888,0L7.926,13.488a.251.251,0,0,0-.354,0L2.529,18.531a.75.75,0,0,1-1.06-1.061l5.043-5.043a.251.251,0,0,0,0-.354l-6.2-6.2a.18.18,0,0,0-.2-.039A.182.182,0,0,0,0,6V18a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V6A.181.181,0,0,0,23.888,5.832Z"
            />
          </g>
        </svg>
      </span>
      Email
    </button>
    <button
      class="chakra-button css-1gkcy1z"
      type="button"
    >
      Arrow Forward
      <span
        class="chakra-button__icon css-xc68f7"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-9na4ut"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`shows spinner and loading text if isLoading and loadingText 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1ax3zce"
    data-loading=""
    disabled=""
    type="button"
  >
    <div
      class="chakra-button__spinner css-1tdm926"
    >
      <div
        class="chakra-spinner css-8k0wtn"
      >
        <span
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        >
          Loading...
        </span>
      </div>
    </div>
    Submitting
  </button>
</DocumentFragment>
`;

exports[`shows spinner if isLoading 1`] = `
<DocumentFragment>
  <button
    class="chakra-button css-1ax3zce"
    data-loading=""
    disabled=""
    type="button"
  >
    <div
      class="chakra-button__spinner css-fwyoyo"
    >
      <div
        class="chakra-spinner css-8k0wtn"
      >
        <span
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        >
          Loading...
        </span>
      </div>
    </div>
    <span
      class="css-q7lffx"
    >
      Email
    </span>
  </button>
</DocumentFragment>
`;
